// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot 1`] = `
<div
  data-stylename="header"
>
  <div
    data-stylename="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      data-stylename="avatar"
      url="/m/123"
    />
    <div
      data-stylename="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          data-stylename="userName"
          replace={false}
          to="/m/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        data-stylename="timestampRow"
      >
        <span
          data-stylename="timestamp"
        />
      </div>
    </div>
    <div
      data-stylename="upperRight"
    />
  </div>
</div>
`;

exports[`matches snapshot 2`] = `
<div
  data-stylename="header"
>
  <div
    data-stylename="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      data-stylename="avatar"
      url="/m/123"
    />
    <div
      data-stylename="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          data-stylename="userName"
          replace={false}
          to="/m/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        data-stylename="timestampRow"
      >
        <span
          data-stylename="timestamp"
        />
        <span>
          <span
            data-stylename="spacer"
          >
            •
          </span>
          <Link
            data-stylename="context"
            replace={false}
            to="/c/fooc"
          >
            FooC
          </Link>
        </span>
      </div>
    </div>
    <div
      data-stylename="upperRight"
    >
      <PostLabel
        data-stylename="label"
        type="request"
      />
    </div>
  </div>
</div>
`;

exports[`matches snapshot 3`] = `
<div
  data-stylename="header"
>
  <div
    data-stylename="headerMainRow"
  >
    <Avatar
      avatarUrl="foo.png"
      data-stylename="avatar"
      url="/m/123"
    />
    <div
      data-stylename="headerText"
    >
      <Highlight
        component="span"
        highlightClassName="highlight"
      >
        <Link
          data-stylename="userName"
          replace={false}
          to="/m/123"
        >
          JJ
        </Link>
      </Highlight>
      <div
        data-stylename="timestampRow"
      >
        <span
          data-stylename="timestamp"
        />
        <span>
          <span
            data-stylename="spacer"
          >
            •
          </span>
          <Link
            data-stylename="context"
            replace={false}
            to="/c/fooc"
          >
            FooC
          </Link>
        </span>
      </div>
    </div>
    <div
      data-stylename="upperRight"
    >
      <PostLabel
        data-stylename="label"
        type="request"
      />
      <Dropdown
        items={
          Array [
            Object {
              "icon": "Edit",
              "label": "Edit",
              "onClick": [Function],
            },
            Object {
              "icon": "Trash",
              "label": "Delete",
              "onClick": [Function],
            },
          ]
        }
        toggleChildren={
          <Icon
            name="More"
          />
        }
      />
    </div>
  </div>
</div>
`;
